--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_auth: ^4.2.5
   cloud_firestore: ^4.5.0
   google_sign_in: ^6.1.0
+  image_picker: ^0.8.7+4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
