--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,8 @@ dependencies:
   cloud_firestore: ^4.5.0
   google_sign_in: ^6.1.0
   image_picker: ^0.8.7+4
-
+  get: ^4.6.6
+  firebase_storage: ^11.0.6
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
