--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,9 @@ dependencies:
   firebase_auth: ^4.17.8
   cloud_firestore: ^4.5.0
   google_sign_in: ^6.1.0
-  image_picker: ^0.8.7+4
-  firebase_storage: ^11.0.6
+  image_picker: ^1.0.4
+  http: ^0.13.6  # for Cloudinary upload
+  firebase storage: ^11.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
