🥳solved the apple issue in flutte supabase

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,12 +33,10 @@ dependencies:
   firebase_core: ^2.27.0
   firebase_auth: ^4.17.8
   cloud_firestore: ^4.5.0
-  google_sign_in: ^6.1.0
   image_picker: ^1.0.4
   http: ^0.13.6  # for Cloudinary upload
   firebase_storage: ^11.7.7
   supabase_flutter: ^1.10.25
-  file_picker: ^6.2.2
   uuid: ^4.1.0
   path: ^1.8.3
   # The following adds the Cupertino Icons font to your application.
@@ -97,3 +95,6 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+dependency_overrides:
+  sign_in_with_apple: ^6.0.0
